--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Crabcake Recipe</h1>
+<img src="https://cdn-image.foodandwine.com/sites/default/files/styles/4_3_horizontal_-_1200x900/public/1532533774/baltimore-style-crab-cakes-XL-RECIPE0918.jpg?itok=L79mHuu0" alt="https://pinchandswirl.com/wp-content/uploads/2018/02/Crab-Cakes-served-on-a-white-plate-with-lemon-slices-square.jpg" style="width:500px;height:300px;">
 
 <h2>Ingredients</h2>
 <ul style="display: table;
